<resources>
    <string name="app_name">Premescla</string>


    <string name="sincronizaci_n">Sincronización</string>
    <string name="descargar_data">Descargar data</string>
    <string name="subir_data">Subir data</string>

    <string name="status_all_s">Todas</string>

    <string name="status_pendientes_s">Pendientes</string>
    <string name="status_onproceso_s">En Proceso</string>
    <string name="status_finalizada_s">Finalizadas</string>


    <string name="status_pendiente">Pendiente</string>
    <string name="status_onproceso">En Proceso</string>
    <string name="status_finalizada">Finalizada</string>

    <string name="tittle_all_orders">Todas las Ordenes</string>
    <string name="tittle_pendiente_orders">Ordenes Pendientes</string>
    <string name="tittle_process_orders">Ordenes en Proceso</string>
    <string name="tittle_finished_orders">Ordenes Finalizadas</string>

    <string name="nav_header_subtitle">soporte@ibao.pe</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="bluetooth">bluetooth</string>
    <string name="fundo">Fundo</string>
    <string name="separador">/</string>
    <string name="empresa">Empresa</string>


    <string name="no_bluetooth">Bluetooth not available.</string>
    <string name="status_disconnected">descpmectadp</string>
    <string name="connect">Conectado</string>
    <string name="paired_devices">Dispositivos Emparejados</string>
    <string name="dispositivo_no_seleccionado">Dispositivo no seleccionado</string>
    <string name="connection_failed">Conexión Fallida</string>
    <string name="connected">Dispositivo Conectado</string>
    <string name="message_send_error">Error el enviar mensaje</string>
    <string name="you_sent">Enviado</string>
    <string name="torelancia_messagge">El margen de error para este producto es del</string>


    <!--instruction-->
    <string name="toast_1">Transaction print,use the AIDL mode!</string>
    <string name="toast_2">The service has been disconnected!</string>
    <string name="toast_3">Bluetooth device is unavailable</string>
    <string name="toast_4">Bluetooth device not detected. Please open Bluetooth!</string>
    <string name="toast_5">Not Found InnterPrinter!</string>
    <string name="toast_6">Bluetooth connect failed!</string>
    <string name="toast_7"> Only a single Qr code is printed for the AIDL mode</string>
    <string name="toast_8">Now QrCode size must be less than 7!</string>
    <string name="toast_9">BarCode type or conent error!</string>
    <string name="toast_10">Please set the printer as black label mode!</string>
    <string name="title_activity_main_mezcla">MainMezclaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="main_fragment_label">Fragment Main</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="conductor">Operador</string>
    <string name="sin_conductor">Sin Operador</string>
    <string name="tractor">Maquinaria</string>
    <string name="sin_tractor">Sin Maquinaria</string>
    <string name="funmigadora">Equipo</string>
    <string name="sin_funmigadora">Sin Equipo</string>

</resources>
