<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    card_view:cardElevation="5dp"
    app:contentPadding="10dp"
    card_view:cardBackgroundColor="@color/colorIcon"
    card_view:cardUseCompatPadding="true"
    android:layout_width="fill_parent"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="false"
    android:layout_margin="@dimen/margin_starndar"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/margin_starndar"
            android:layout_marginEnd="@dimen/margin_starndar"
            android:layout_marginTop="@dimen/margin_starndar"
            android:layout_marginBottom="@dimen/margin_starndar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/fmain_item_dateTime"
                    style="@style/tView_secondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="02/03/1992 02:35:00"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_access_time_black_24dp"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_pendiente"
                    android:tint="@color/colorDisable"
                    />

                <TextView
                    android:id="@+id/fmain_item_status"
                    android:layout_marginStart="@dimen/margin_min"
                    style="@style/tView_secondaryText"
                    android:textColor="@color/colorDisable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status_pendiente"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="left"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_send_black_24dp"
                    />

                <TextView
                    android:id="@+id/fmain_item_nOrden"
                    android:layout_marginStart="@dimen/margin_min"
                    style="@style/tView_secondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="#123123"
                    />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_floating_button"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/fmain_item_Fundo"
                    style="@style/tView_Tittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fundo" />
                <TextView
                    style="@style/tView_Tittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_min"
                    android:layout_marginEnd="@dimen/margin_min"
                    android:text="@string/separador" />
                <TextView
                    android:id="@+id/fmain_item_Empresa"
                    style="@style/tView_Tittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empresa" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_line_weight_black_24dp"
                    />
                <TextView
                    android:id="@+id/fmain_item_nTankComplete"
                    android:layout_marginStart="@dimen/margin_min"
                    style="@style/tView_secondaryText"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0" />
                <TextView
                    style="@style/tView_secondaryText"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/separador" />
                <TextView
                    android:id="@+id/fmain_item_nTankAll"
                    style="@style/tView_secondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fmain_item_fabCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/margin_starndar"
        android:clickable="false"
        android:focusable="false"
        app:fabSize="mini"
        app:backgroundTint="@color/colorAccent"
        app:srcCompat="@drawable/ic_recipe"
        app:tint="@color/white" />

</androidx.cardview.widget.CardView>