<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.mod1.views.fragment.orden.OrdenFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/aorden_swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="@dimen/margin_starndar"
                android:layout_marginRight="8dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <LinearLayout
                        android:id="@+id/fmain_item_pendiente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:orientation="horizontal"
                        >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_pan_tool_black_24dp"
                            app:tint="@color/colorDisable"
                            />

                        <TextView
                            android:layout_marginStart="@dimen/margin_min"
                            style="@style/tView_secondaryText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/status_pendiente"
                            android:textColor="@color/colorDisable"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/fmain_item_onprocess"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:visibility="gone"
                        android:orientation="horizontal"

                        >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_on_proccess"
                            app:tint="@color/colorAccent"
                            />

                        <TextView
                            android:layout_marginStart="@dimen/margin_min"
                            style="@style/tView_secondaryText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/status_onproceso"
                            android:textColor="@color/colorAccent"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/fmain_item_finish"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:orientation="horizontal"
                        >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_all"
                            app:tint="@color/red_pastel"
                            />

                        <TextView
                            android:layout_marginStart="@dimen/margin_min"
                            style="@style/tView_secondaryText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/status_finalizada"
                            android:textColor="@color/red_pastel"
                            />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_send_black_24dp" />

                    <TextView
                        android:id="@+id/aorden_tViewnNOrden"
                        style="@style/tView_secondaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_min"
                        android:text="#123123" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/aorden_tViewEmpresa"
                        style="@style/tView_Tittle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/empresa" />
                    <TextView
                        style="@style/tView_Tittle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_min"
                        android:layout_marginEnd="@dimen/margin_min"
                        android:text="@string/separador" />
                    <TextView
                        android:id="@+id/aorden_tViewFundo"
                        style="@style/tView_Tittle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fundo" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_line_weight_black_24dp" />

                    <TextView
                        android:id="@+id/aorden_tViewNTankComplete"
                        style="@style/tView_secondaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_min"
                        android:text="0"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/tView_secondaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/separador"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/aorden_tViewNTankAll"
                        style="@style/tView_secondaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="right"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/aorden_tViewDateTime"
                    style="@style/tView_secondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:text="02/03/1992 02:35:00" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_time_red" />

            </LinearLayout>
            <!--
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fmain_item_fabCheck"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
                app:srcCompat="@drawable/ic_recipe"
                tools:ignore="MissingConstraints" />
            -->
            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <TextView
                android:id="@+id/textView7"
                style="@style/tView_Tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="Lista de Tancadas"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:spanCount="1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lista vacía"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
                app:layout_constraintEnd_toEndOf="@+id/recyclerView"
                app:layout_constraintStart_toStartOf="@+id/recyclerView"
                app:layout_constraintTop_toTopOf="@+id/recyclerView"
                app:layout_constraintVertical_bias="0.4" />

            <!--
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:focusable="true"
                android:tint="@color/white"
                app:backgroundTint="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:rippleColor="@color/colorPrimaryDark"
                app:srcCompat="@drawable/ic_plus_one_black_24dp" />
            -->

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>